Fix effect overflow

--- a/app/Item/Item.scss
+++ b/app/Item/Item.scss
@@ -35,6 +35,7 @@
         width: 100%;
         height: 150px;
         position: relative;
+        overflow: hidden;
 
         &::after {
             content: "";
